--- a/i3bar-conky.conf
+++ b/i3bar-conky.conf
@@ -1,87 +1,67 @@
-### Conky configuration file
-## Output is printed to the console -> i3bar
-# Modified: 27.11.2011 - mseed : http://www.fastlinux.eu
+conky.config = {
+    alignment = 'top_left',
+    background = false,
+    border_width = 0,
+    cpu_avg_samples = 2,
+	default_color = 'white',
+    default_outline_color = 'white',
+    default_shade_color = 'white',
+    net_avg_samples = 2,
+    no_buffers = true,
+    out_to_console = true,
+    out_to_x = false,
+    extra_newline = false,
+    own_window = false,
+    stippled_borders = 0,
+    update_interval = 2.0,
+    uppercase = false,
+    use_spacer = 'left',
+}
 
-### 
-# use_xft yes
-# xftfont Helvetica:size=15
-# xftalpha 0.9
 
-## No output to X <yes/no>
-out_to_x no
-
-## Create own window to draw <yes/no>
-own_window no
-
-## Print everything to console?
-out_to_console yes
-
-## Use double buffering (reduces flicker, not needed for console output)
-double_buffer no
-
-## Set to yes if you want Conky to be forked in the background
-background no
-
-## Update interval in seconds
-update_interval 2.0
-
-## This is the number of times Conky will update before quitting.
-## Set to zero to run forever.
-total_run_times 0
-
-## Shortens units to a single character (kiB->k, GiB->G, etc.). Default is off.
-short_units yes
-
-## How strict should if_up be when testing an interface for being up?
-## The value is one of up, link or address, to check for the interface
-## being solely up, being up and having link or being up, having link
-## and an assigned IP address. 
-if_up_strictness address
-
-## Add spaces to keep things from moving about?  This only affects certain objects.
-## use_spacer should have an argument of left, right, or none
-use_spacer left
-
-## Force UTF8? note that UTF8 support required XFT
-override_utf8_locale no
-
-## number of cpu samples to average
-## set to 1 to disable averaging
-cpu_avg_samples 2
-
-## Sensors examples
-# Top Process: ${top name 1}
-# Root: {fs_used /}/${fs_size /} /home ${fs_free /home} /${fs_size /home}
-# Load: ${loadavg 1} ${loadavg 2} ${loadavg 3} 
-# Load: $loadavg
-# Swap: ${swap}/${swapmax} (${swapperc}%)
-# Processes: ${running_processes} / ${processes}
-# CPU: $cpu% 
-# HDD: $diskio_read :Read $diskio_write :Write
-# Temp: Core0: ${exec sensors | awk '/Core 0/ {print $3}'} Core1: ${exec sensors | awk '/Core 1/ {print $3}'}
-# Freq: ${freq cpu0}Mhz
-# Uptime: $uptime
-# Kernel:$kernel on $machine
-# Name: $nodename - $sysname
-# Battery: ${battery_percent BAT0}%
-
-## Stuff after 'TEXT' will be formatted on screen
-TEXT
-# Free space
-/ ${fs_free /} | \
-/home ${fs_free /home} | \
+conky.text = [[
+[
+{
+  "full_text": "/ ${fs_free /} | /home ${fs_free /home}",
+    "color": "\#BFBFBF"
+},
 # Ethernet status
-${if_up enp2s0}Eth ${addr enp2s0} | ${endif}\
+${if_up enp2s0}
+{
+"full_text": "Eth ${addr enp2s0}",
+    "color": "\#00FF00"
+},
+${endif}
 # Wireless status
-${if_up wlp1s0}Wifi ${addr wlp1s0} | ${endif}\
+${if_up wlp1s0}
+{
+  "full_text": "${wireless_essid} ${addr wlp1s0}",
+    "color": "\#00FF00"
+},
+${endif}
 # USB status
-${if_up enp0s29u1u3}USB ${addr enp0s29u1u3} | ${endif}\
+${if_up enp0s29u1u3}
+{
+  "full_text": "USB ${addr enp0s29u1u3}",
+    "color": "\#BFBFBF"
+},
+${endif}
 # CPU stats
-CPU ${cpu}% ${freq_g}GHz ${exec sensors | grep -m 1 "Core 0"|awk '{print $3}'} | \
-L: ${loadavg 1} | \
-# RAM in use
-RAM ${memperc}% | \
-Batt: ${battery_percent BAT1}% | \
-#BATT ${battery BAT0} | \
+{
+  "full_text": "CPU ${cpu}% ${freq_g}GHz ${exec sensors | grep -m 1 "Core 0"|awk '{print $3}'} | L: ${loadavg 1} | RAM ${memperc}%",
+    "color": "\#BFBFBF"
+},
+{
+  "full_text": "Batt: ${battery_percent BAT1}% ${battery_time BAT1}",
+    "color": 
+	${if_match ${battery_percent BAT1}<30}"\#FF0000"
+	${else}"\#BFBFBF"
+	${endif}
+},
+{
+  "full_text": "${time %a %d.%m.%y} ${time %H:%M}",
+    "color": "\#BFBFBF"
+}
+],
+]]
 
-${time %a %d.%m.%y} ${time %H:%M}
