--- a/i3bar-conky.conf
+++ b/i3bar-conky.conf
@@ -26,26 +26,23 @@ conky.text = [[
     "color": "\#BFBFBF"
 },
 # Ethernet status
-${if_up enp2s0}
 {
-"full_text": "Eth ${addr enp2s0}",
+    "full_text": "${if_up enp2s0} Eth ${addr enp2s0} ${endif}",
     "color": "\#00FF00"
 },
-${endif}
+
 # Wireless status
-${if_up wlp1s0}
 {
-  "full_text": "${wireless_essid} ${addr wlp1s0}",
+    "full_text": "${if_up wlp1s0} ${wireless_essid} ${addr wlp1s0} ${endif}",
     "color": "\#00FF00"
 },
-${endif}
+
 # USB status
-${if_up enp0s29u1u3}
 {
-  "full_text": "USB ${addr enp0s29u1u3}",
+  "full_text": "${if_up enp0s29u1u3} USB ${addr enp0s29u1u3} ${endif}",
     "color": "\#BFBFBF"
 },
-${endif}
+
 # CPU stats
 {
   "full_text": "CPU ${cpu}% ${freq_g}GHz ${exec sensors | grep -m 1 "Core 0"|awk '{print $3}'} | L: ${loadavg 1} | RAM ${memperc}%",
@@ -54,8 +51,10 @@ ${endif}
 {
   "full_text": "Batt: ${battery_percent BAT1}% ${battery_time BAT1}",
     "color": 
-	${if_match ${battery_percent BAT1}<30}"\#FF0000"
+	${if_match ${battery_percent BAT1}<25}"\#FF0000"
+	${else} ${if_match ${battery_percent BAT1}>75}"\#00FF00"
 	${else}"\#BFBFBF"
+	${endif}
 	${endif}
 },
 {
