--- a/i3bar-conky.conf
+++ b/i3bar-conky.conf
@@ -26,21 +26,33 @@ conky.text = [[
     "color": "\#BFBFBF"
 },
 # Ethernet status
+${if_up enp2s0} 
+${if_match "${addr enp2s0}" != "No Address"}
 {
-    "full_text": "${if_up enp2s0} Eth ${addr enp2s0} ${endif}",
+    "full_text": "E: ${addr enp2s0}\u2191${downspeedf enp2s0}k \u2193${upspeedf enp2s0}k",
     "color": "\#00FF00"
 },
+${endif} 
+${endif}
 
 # Wireless status
+${if_up wlp1s0}
 {
-    "full_text": "${if_up wlp1s0} ${wireless_essid} ${addr wlp1s0} ${endif}",
+    "full_text": " ${wireless_essid} ${addr wlp1s0} \u2191${downspeedf wlp1s0}k\u2193${upspeedf wlp1s0}k",
     "color": "\#00FF00"
 },
+${endif}
 
 # USB status
 {
   "full_text": "${if_up enp0s29u1u3} USB ${addr enp0s29u1u3} ${endif}",
     "color": "\#BFBFBF"
+},
+
+#IO
+{ 
+	"full_text" : "IO:\u2191${diskio_read}\u2193${diskio_write}", 
+	"color" : "\#dce7ed"
 },
 
 # CPU stats
@@ -58,7 +70,7 @@ conky.text = [[
 	${endif}
 },
 {
-  "full_text": "${time %a %d.%m.%y} ${time %H:%M}",
+  "full_text": "${time %H:%M} ${time %a %d.%m.%y}",
     "color": "\#BFBFBF"
 }
 ],
