--- a/i3bar-conky.conf
+++ b/i3bar-conky.conf
@@ -2,7 +2,7 @@ conky.config = {
     alignment = 'top_left',
     background = false,
     border_width = 0,
-    cpu_avg_samples = 2,
+    cpu_avg_samples = 4,
 	default_color = 'white',
     default_outline_color = 'white',
     default_shade_color = 'white',
@@ -16,6 +16,7 @@ conky.config = {
     update_interval = 2.0,
     uppercase = false,
     use_spacer = 'left',
+    short_units = true,
 }
 
 
