--- a/i3bar-conky.conf
+++ b/i3bar-conky.conf
@@ -23,17 +23,15 @@ conky.config = {
 conky.text = [[
 [
 {
-  "full_text": "/ ${fs_free /} | /home ${fs_free /home}",
+  "full_text": "Sys ${fs_free /} | Data ${fs_free /mnt/stockage}",
     "color": "\#BFBFBF"
 },
 # Ethernet status
-${if_up enp2s0} 
-${if_match "${addr enp2s0}" != "No Address"}
+${if_up enp7s0} 
 {
-    "full_text": "E: ${addr enp2s0}\u2191${downspeedf enp2s0}k \u2193${upspeedf enp2s0}k",
+    "full_text": "E: ${addr enp7s0}\u2191${downspeedf enp7s0}k \u2193${upspeedf enp7s0}k",
     "color": "\#00FF00"
 },
-${endif} 
 ${endif}
 
 # Wireless status
@@ -61,15 +59,15 @@ ${endif}
   "full_text": "CPU ${cpu}% ${freq_g}GHz ${exec sensors | grep -m 1 "Core 0"|awk '{print $3}'} | L: ${loadavg 1} | RAM ${memperc}%",
     "color": "\#BFBFBF"
 },
-{
-  "full_text": "Batt: ${battery_percent BAT1}% ${battery_time BAT1}",
-    "color": 
-	${if_match ${battery_percent BAT1}<25}"\#FF0000"
-	${else} ${if_match ${battery_percent BAT1}>75}"\#00FF00"
-	${else}"\#BFBFBF"
-	${endif}
-	${endif}
-},
+#{
+#  "full_text": "Batt: ${battery_percent BAT1}% ${battery_time BAT1}",
+#    "color": 
+#	${if_match ${battery_percent BAT1}<25}"\#FF0000"
+#	${else} ${if_match ${battery_percent BAT1}>75}"\#00FF00"
+#	${else}"\#BFBFBF"
+#	${endif}
+#	${endif}
+#},
 {
   "full_text": "${time %H:%M} ${time %a %d.%m.%y}",
     "color": "\#BFBFBF"
