fix arrow download/upload

--- a/i3bar-conky.conf
+++ b/i3bar-conky.conf
@@ -23,14 +23,14 @@ conky.config = {
 conky.text = [[
 [
 {
-  "full_text": "/ ${fs_free /} | /home ${fs_free /home}",
+  "full_text": "/ ${fs_free /} | data ${fs_free /mnt/stockage}",
     "color": "\#BFBFBF"
 },
 # Ethernet status
 ${if_up enp2s0} 
 ${if_match "${addr enp2s0}" != "No Address"}
 {
-    "full_text": "E: ${addr enp2s0}\u2191${downspeedf enp2s0}k \u2193${upspeedf enp2s0}k",
+    "full_text": "E: ${addr enp2s0}\u2193${downspeedf enp2s0}k \u2191${upspeedf enp2s0}k",
     "color": "\#00FF00"
 },
 ${endif} 
@@ -38,10 +38,12 @@ ${endif}
 
 # Wireless status
 ${if_up wlp1s0}
+${if_match "${addr wlp1s0}" != "No Address"}
 {
-    "full_text": " ${wireless_essid} ${addr wlp1s0} \u2191${downspeedf wlp1s0}k\u2193${upspeedf wlp1s0}k",
+    "full_text": " ${wireless_essid} ${addr wlp1s0} \u2193${downspeedf wlp1s0}k\u2191${upspeedf wlp1s0}k",
     "color": "\#00FF00"
 },
+${endif}
 ${endif}
 
 # USB status
@@ -63,7 +65,7 @@ ${endif}
 },
 {
   "full_text": "Batt: ${battery_percent BAT1}% ${battery_time BAT1}",
-    "color": 
+    "color":
 	${if_match ${battery_percent BAT1}<25}"\#FF0000"
 	${else} ${if_match ${battery_percent BAT1}>75}"\#00FF00"
 	${else}"\#BFBFBF"
