--- a/i3bar-conky.conf
+++ b/i3bar-conky.conf
@@ -23,7 +23,7 @@ conky.config = {
 conky.text = [[
 [
 {
-  "full_text": "/ ${fs_free /} | data ${fs_free /mnt/stockage}",
+  "full_text": "/ ${fs_free /} | data ${fs_free /mnt/stock}",
     "color": "\#BFBFBF"
 },
 # Ethernet status
